--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dofus-remote/plugins",
+  "name": "@dofus-remote/plugin",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
