--- a/packages/version/package.json
+++ b/packages/version/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dofus-remote/versions",
+  "name": "@dofus-remote/version",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
