--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dofus-remote/kernel",
+  "name": "@dofus-remote/client",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -16,5 +16,14 @@
     "url": "https://github.com/dofus-remote/client/issues"
   },
   "homepage": "https://github.com/dofus-remote/client#readme",
-  "dependencies": {}
+  "dependencies": {
+    "engine.io": "^3.3.2",
+    "engine.io-client": "^3.3.2",
+    "primus": "^7.3.3",
+    "signale": "^1.4.0"
+  },
+  "signale": {
+    "displayFilename": true,
+    "displayTimestamp": true
+  }
 }
